[package]
name = "scratchstack-wrapper-aws-c-common"
description = "Scratchstack Rust wrapper around aws-c-common library"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2021"
homepage = "https://github.com/dacut/scratchstack-wrapper-aws-c-common"
license = "Apache-2.0"
repository = "https://github.com/dacut/scratchstack-wrapper-aws-c-common"
version = "0.1.0-alpha.3"
build = "build.rs"
include = [
    "/include/aws/common/*.h",
    "/include/aws/common/*.inl",
    "/src",
    "Cargo.toml",
    "build.rs",
]

[lib]
name = "scratchstack_wrapper_aws_c_common"
crate-type = ["lib"]
doctest = false

[build-dependencies]
bindgen = "^0.61"

[dependencies]
libc = "^0.2"

[dev-dependencies]
env_logger = "^0.9"
log = "^0.4"
pretty_assertions = "^1.3"
test-log = "^0.2"
