[package]
name = "scratchstack-wrapper-aws-c-common"
description = "Scratchstack Rust wrapper around aws-c-common library"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2021"
homepage = "https://github.com/dacut/scratchstack-wrapper-aws-c-common"
license = "Apache-2.0"
repository = "https://github.com/dacut/scratchstack-wrapper-aws-c-common"
version = "0.1.0-alpha.7"
build = "build.rs"
include = [
    "/include/aws/common/*.h",
    "/include/aws/common/*.inl",
    "/src",
    "Cargo.toml",
    "build.rs",
]
links = "aws-c-common"

[lib]
name = "scratchstack_wrapper_aws_c_common"
crate-type = ["lib"]
doctest = false

[build-dependencies]
bindgen = "^0.61"

[dependencies]
libc = "^0.2"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
core-foundation = "^0.9"
